# Job-Application-system

./: .gitignore  README.md  package-lock.json  package.json
ai-service/: app.py  pyproject.toml  requirements.txt
backend/: app.js  package-lock.json  package.json  server.js
backend/config/: multer.js
backend/controllers/: atsController.js  authController.js  jobController.js
backend/middleware/: authMiddleware.js
backend/models/: Job.js  User.js
backend/routes/: aiRoutes.js  atsRoutes.js  authRoutes.js  jobRoutes.js  userRoutes.js
frontend/: App.jsx  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js
frontend/src/components/: CTA.jsx  Features.jsx  Footer.js  Hero.jsx  JobCard.js  JobList.js  Navbar.js  Stats.jsx  Steps.jsx  UploadSection.js
frontend/src/pages/: ATSChecker.jsx  About.js  Dashboard.jsx  Home.js  JobsBrowser.jsx  Login.js  Profile.js  RecruiterPortal.jsx  Signup.js  UserDashboard.jsx  user.js
