[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pandas>=3.0.2",
    "pdfminer-six>=20260107",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.46.0",
]
